--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   syncfusion_flutter_charts: ^20.3.50
-  web_socket_channel: ^2.2.0
+  record: ^4.4.3
 
 dev_dependencies:
   flutter_test:
